[package]
name = "dimensions"
version = "0.1.0"
edition = "2021"
description = "Struct(s) for handling dimensions"
license = "AGPL-3.0-or-later"
repository = "https://github.com/alxpettit/dimensions"
keywords = ["calculator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
rusttype = "0.9.3"
